--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
       </header>
       <div class="friends__section-rows">
         <div class="friends__section-row">
-            <img src="images/ryan.jpg" alt="">
-            <a href="profile.html" class="fiends__section-name">
-              Nicolas
+            <a href="profile.html">
+                <img src="images/ryan.jpg" alt="">
+                <span class="fiends__section-name">Nicolas</span>
             </a>
         </div>
         <div class="friends__section-row">
